--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -1,27 +1,13 @@
-<!--投稿詳細-->
-
-
 <h3><%= @post.title %></h3>
 <p><%= @post.content %></p>
+<p><%= @post.score %></p>
 
 
-<!--投稿者のみ表示 -->
-
-
-<% if @post.user_id == current_user %>
+<% if @post.user_id == current_user.id %>
   <%= link_to "Edit", edit_post_path(@post.id), class:"btn btn-sm btn-success" %>
   <%= link_to "Destroy", post_path(@post.id), method: :delete, "data-confirm" => "本当に消しますか？", class:"btn btn-sm btn-danger" %>
-<% end %>
+<% end %><!--if user current_user?-->
 
-
-<!--投稿者のみ表示 おしまい-->
-
-
-<!--管理者のみ表示-->
-  <% if admin_signed_in? %>
-    <%= link_to "Destroy", post_path(@post.id), method: :delete, "data-confirm" => "本当に消しますか？", class:"btn btn-sm btn-danger" %>
-  <% end %>
-<!--管理者のみ表示　おしまい-->
-
-
-<!--投稿詳細　おしまい-->
+<% if admin_signed_in? %>
+  <%= link_to "Destroy", post_path(@post.id), method: :delete, "data-confirm" => "本当に消しますか？", class:"btn btn-sm btn-danger" %>
+<% end %><!--if user admin?-->
