エラー修正

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,8 @@
 </head>
 
 
-  <header class="container">
+  <header>
+    <div class="container">
     <div class="row">
     <div class="rogo col-5">
       <h2>
@@ -111,6 +112,7 @@
       <% end %>
     </div><!--.genre_list-->
     </div><!--.row-->
+    </div><!--.container-->
   </header>
 
 
