--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -1,6 +1,7 @@
 <h3><%= @post.title %></h3>
 <p><%= @post.content %></p>
 <p><%= @post.score %></p>
+<span></span>
 
 
 <% if @post.user_id == current_user.id %>
