--- a/app/views/public/homes/genre_scope.html.erb
+++ b/app/views/public/homes/genre_scope.html.erb
@@ -1,7 +1,18 @@
 
 <h1><%= @genre.name %></h1>
+
 <% @genre.post_genres.each do |f| %>
-  <h3><%= f.post.title %></h3>
-  <p><%= f.post.content %></p>
+  <%= link_to post_path(f.post) do %>
+    <h3><%= f.post.title %></h3>
+  <% end %><!--link_to post_path-->
+  <p>
+  <% f.post.post_genres.each do |h| %>
+    <span>:
+      <%= link_to homes_genre_scope_path(genre_id: h.genre.id) do %>
+        <%= h.genre.name %>
+      <% end %>
+    </span>
+  <% end %><!--each f-->
+</p>
   <br>
-<% end %>
+<% end %><!--each f-->
