--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,14 +7,13 @@
   <%= csp_meta_tag %>
 
   <script src="https://kit.fontawesome.com/0cb697a6b2.js" crossorigin="anonymous"></script>
-  <%= stylesheet_link_tag 'custom.css', media: 'all' %>
-  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
 </head>
 
 <div class="container">
   <header>
-    
+
     <div class="row">
     <div class="rogo col-5">
       <h2>
@@ -112,7 +111,7 @@
       <% end %>
     </div><!--.genre_list-->
     </div><!--.row-->
-    
+
   </header>
 
 
